# Blosc2-Btune

./: .gitignore  ANNOUNCE.md  CMakeLists.txt  LICENSE.txt  README-DEVELOPERS.md  README.md  RELEASE_NOTES.md  RELEASING.rst  prebuild.sh  pyproject.toml  requirements-build.txt  requirements.txt  setup.py
.github/workflows/: cibuildwheels.yml
blosc2_btune/: __init__.py
examples/: btune_config.py  btune_example.c  create_ndarray.py  create_schunk.py  lossy.py  lossy_example.tif  reuse_models.py
examples/models/: model_comp.json  model_comp.tflite  model_decomp.json  model_decomp.tflite
examples/tomography_models/: model_comp.json  model_comp.tflite  model_decomp.json  model_decomp.tflite
models_sample/: model_comp.json  model_comp.tflite  model_decomp.json  model_decomp.tflite
src/: CMakeLists.txt  blosc2_entropy_prober.c  btune-private.h  btune.c  btune.h  btune_example.c  btune_info_public.h  btune_model.cpp  btune_model.h  context.h  entropy_probe.c  entropy_probe.h  json.h
