# Blosc - Blocked Shuffling and Compression Library
#
# Copyright (C) 2021  The Blosc Developers <blosc@blosc.org>
# https://blosc.org
# License: BSD 3-Clause (see LICENSE.txt)
#
# See LICENSE.txt for details about copyright and rights to use.

[build-system]
requires = ["setuptools", "scikit-build", "cmake", "ninja", "blosc2"]
build-backend = "setuptools.build_meta"

[project]
name = "blosc2_btune"
dynamic = ["version", "readme"]
authors = [
    {name = "Blosc Development Team", email = "blosc@blosc.org"},
]
description = "My package description"
keywords = ["plugin", "blosc2"]
license = {text = "BSD-3-Clause"}
classifiers = [
    "Framework :: Django",
    "Programming Language :: Python :: 3",
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: BSD License",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: Unix",
    "Programming Language :: C",
    "Programming Language :: C++"
]
dependencies = [
    "blosc2"
]

[tool.setuptools.dynamic]
version = {attr = "blosc2_btune.VERSION"}
readme = {file = ["README.md"], content-type = "text/markdown"}

[tool.setuptools]
platforms = [ "any" ]
zip-safe = false

[tool.cibuildwheel]
skip = "cp36-* cp37-* pp37-* *-manylinux_i686 *_ppc64le *_s390x *-musllinux*"
