##############################################################################
# Btune for Blosc2 - Automatically choose the best codec/filter for your data
#
# Copyright (c) 2023 The Blosc Developers <blosc@blosc.org>
# https://btune.blosc.org
# License: GNU Affero General Public License v3.0
# See LICENSE.txt for details about copyright and rights to use.
##############################################################################

[build-system]
requires = ["setuptools", "scikit-build", "cmake", "ninja"]
build-backend = "setuptools.build_meta"

[project]
name = "blosc2_btune"
dynamic = ["version", "readme"]
authors = [
    {name = "Blosc Development Team", email = "contact@blosc.org"},
]
description = "Btune plugin for Blosc2. Automatically choose the best codec/filter for your data."
keywords = ["plugin", "blosc2"]
license = {text = "GNU Affero General Public License version 3"}
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: C",
    "Programming Language :: C++",
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: Unix",
]
dependencies = [
    #"blosc2"  # python-blosc2 is not a runtime dependency
]

[tool.setuptools.dynamic]
version = {attr = "blosc2_btune.VERSION"}
readme = {file = ["README.md"], content-type = "text/markdown"}

[tool.setuptools]
platforms = [ "any" ]
zip-safe = false

[tool.cibuildwheel]
skip = "cp36-* cp37-* pp37-* *-manylinux_i686 *_ppc64le *_s390x *-musllinux*"
